--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>br.com.gammonsistemas</groupId>
 	<artifactId>asheos</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>asheos</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -99,6 +99,15 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.5.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -154,5 +163,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
