--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,41 @@
 services:
   postgres:
-    image: 'postgres:latest'
+    image: 'postgres:16'
+    container_name: asheos-db
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - '5432'
+      - '5434:5432'
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: always
+  minio:
+    image: quay.io/minio/minio
+    container_name: asheos-minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    command: server /data --console-address ":9001"
+    environment:
+      # O Docker Compose vai buscar o valor dessas variáveis no arquivo .env
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+    volumes:
+      - minio_data:/data
+    restart: always
+  app:
+    build: .
+    container_name: asheos-api
+    ports:
+      - '8080'
+    env_file:
+      - .env
+    depends_on:
+      - postgres
+      - minio
+    restart: always
+volumes:
+  postgres_data:
+  minio_data:
