--- a/.github/workflows/maven-CI.yml
+++ b/.github/workflows/maven-CI.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   build:
 
-    environment: ci  # 👈 aqui é o nome do environment criado
+    environment: ci
 
     runs-on: ubuntu-latest
 
@@ -29,11 +29,9 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-    
-      run: mvn -B package --file pom.xml
-      env:
-        ENV: ${{ vars.ENV }}
-        DB_URL: ${{ secrets.DB_URL }}
-        DB_USERNAME: ${{ secrets.DB_USER }}
-        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+    # - name: Build with Maven
+    #   run: mvn -B package --file pom.xml
+    - name: Print env
+      run: echo "ENV ${{ vars.ENV }}"
+    - name: Print DB URL
+      run: echo "DB_URL ${{ secrets.DB_URL }}"
