Buscando possível solução para as variáveis de ambiente durante o Workflow

--- a/.github/workflows/maven-CI.yml
+++ b/.github/workflows/maven-CI.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Print env
       run: echo "ENV ${{ vars.ENV }}"
     - name: Print DB URL
-      run: echo "DB_URL ${{ secrets.DB_URL }}"
+      run: echo "DB_URL ${{ vars.DB_URL }}"
