--- a/.github/workflows/maven-CI.yml
+++ b/.github/workflows/maven-CI.yml
@@ -29,5 +29,9 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+      env:
+        DB_URL: ${{ vars.DB_URL }}
+        DB_USERNAME: ${{ vars.DB_USER }}
+        DB_PASSWORD: ${{ vars.DB_PASSWORD }}
     - name: Build with Maven
       run: mvn -B package --file pom.xml
