--- a/.github/workflows/maven-CI.yml
+++ b/.github/workflows/maven-CI.yml
@@ -34,4 +34,4 @@ jobs:
         DB_USERNAME: ${{ vars.DB_USER }}
         DB_PASSWORD: ${{ vars.DB_PASSWORD }}
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package -Dspring.profiles.active=ci --file pom.xml
