--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+
+		<DB_URL>${env.DB_URL}</DB_URL>
+        <DB_USER>${env.DB_USER}</DB_USER>
+        <DB_PASSWORD>${env.DB_PASSWORD}</DB_PASSWORD>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -162,5 +166,11 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
 	</build>
 </project>
