--- a/.github/workflows/maven-CI.yml
+++ b/.github/workflows/maven-CI.yml
@@ -30,8 +30,9 @@ jobs:
         distribution: 'temurin'
         cache: maven
       env:
+        ENV: ${{ vars.ENV }}
         DB_URL: ${{ vars.DB_URL }}
         DB_USERNAME: ${{ vars.DB_USER }}
         DB_PASSWORD: ${{ vars.DB_PASSWORD }}
     - name: Build with Maven
-      run: mvn -B package -Dspring.profiles.active=ci --file pom.xml
+      run: mvn -B package --file pom.xml
