--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
         url: ${DB_URL}
         username: ${DB_USERNAME}
         password: ${DB_PASSWORD}
-        driver-class-name: org.postgresql.Driver
+        driver-class-name: ${DB_DRIVER}
     jpa:
         hibernate:
             ddl-auto: update
